--- a/package.json
+++ b/package.json
@@ -8,20 +8,21 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@nextui-org/react": "1.0.2-beta.2",
-    "autoprefixer": "^10.4.2",
-    "axios": "^0.25.0",
-    "canvas-confetti": "^1.4.0",
-    "next": "12.0.9",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "@nextui-org/react": "^1.0.0-beta.9",
+    "autoprefixer": "^10.4.8",
+    "axios": "^0.27.2",
+    "canvas-confetti": "^1.5.1",
+    "next": "^12.2.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@types/canvas-confetti": "^1.4.2",
-    "@types/node": "17.0.12",
-    "@types/react": "17.0.38",
-    "eslint": "8.7.0",
-    "eslint-config-next": "12.0.9",
-    "typescript": "4.5.5"
+    "@types/canvas-confetti": "^1.4.3",
+    "@types/node": "^18.6.4",
+    "@types/react": "^18.0.16",
+    "eslint": "^8.21.0",
+    "eslint-config-next": "^12.2.4",
+    "typescript": "^4.7.4",
+    "yarn-upgrade-all": "^0.7.1"
   }
 }
